# cerebro

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONVENTIONS.md  Dockerfile  Makefile  Procfile  README 2.md  README.md  SCHEMA.md  TASK-SPEC-TEMPLATE.md  migration_demand_engine.sql  package 2.json  package-lock.json  railway.toml  requirements.txt  schema.sql
apps/api/: pyproject.toml  requirements.txt
apps/api/app/: main.py
apps/api/app/middleware/: auth.py  logging_mw.py  rate_limit.py  ratelimit.py
apps/api/app/routers/: attribution.py  briefing.py  content.py  conversation.py  execution.py  intelligence.py  intelligence_v2.py  leads.py  loop.py  personas.py  strategy.py  system.py
apps/api/app/schemas/: content.py  execution.py  intelligence_v2.py  leads.py  loop.py  personas.py  strategy.py
docs/: CEREBRO-Architecture.md  CEREBRO-Master-Plan.md  CEREBRO-Panama-Market-Intelligence.md  program.md
migrations/: 001_core.sql  002_content.sql  003_leads.sql  004_strategy.sql  005_attribution.sql  006_multibrand.sql  007_personas.sql  008_operations.sql  009_execution.sql  010_social.sql  011_cycle_runs.sql  012_maintenance.sql  013_client_intelligence.sql  014_conversations.sql  015_content_scoring.sql  016_products.sql  017_persona_voice.sql  018_intelligence_layer.sql  019_fix_fact_evidence_site_id.sql  020_content_assets_metadata.sql  021_brand_store_model.sql  022_fix_intelligence_functions.sql  023_archive_false_entities.sql
scripts/: check_deploy.py  generate_sprint1.py  setup.sh  test_pipeline.py
tests/: test_smoke.py
(+84 files in other folders)
